--- a/index.html
+++ b/index.html
@@ -4,55 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bio</title>
+    <title>switch</title>
 </head>
 <body>
-    <section class="section">
-        <div class="title">
-            <h2>About</h2>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam expedita odio porro hic nam pariatur quis rerum nobis, corrupti odit atque sit adipisci sint ipsam iure cumque a non. Sunt!
-            </p>
-        </div>
-        <div class="about-center section-center">
-            <article class="about-img">
-                <img src="" alt="">
-            </article>
-            <article class="about">
-                <!-- btn container--> 
-                <div class="btn-container">
-                    <button class="tab-btn active" data-id="history">history</button>
-                    <button class="tab-btn " data-id="vision">vision</button>
-                    <button class="tab-btn " data-id="goals">goals></button>
-                </div> 
-                <div class="about-content"></div>  
-                    <!-- single item-->
-                <div class="content active" id="history"></div> 
-                <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam pariatur recusandae esse quis officiis, dolore nulla iste ipsa architecto consequuntur rem est molestias delectus, nostrum tempore odio, explicabo iure vitae?
-                </p>
-                <div class="content" id="vision">
-                    <h4>vision</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime corrupti ipsum hic sed? Iure nisi modi ullam perferendis vero dignissimos, quos expedita harum. Perspiciatis, vero totam natus aut officia laborum.
-                    </p>
-                    <ul>
-                        <li>list item</li>
-                        <li>list item</li>
-                        <li>list item</li>
-                    </ul>
-                </div>
-                <div class="content" id="goals">
-                    <h4>goals</h4>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus corrupti incidunt, voluptas nobis earum quos omnis cumque modi voluptatem laboriosam ex dolorem soluta magnam repellendus aperiam, voluptatibus ipsum nihil laborum?
-                    </p>
-                </div>
-            </article>
-        </div>}
-    </section>
-
-    <script src="index.js"></script>
-    
+    <div class="container">  
+        <h1>Theme Switcher</h1>  
+        <label id="switch" class="switch">  
+            <input type="checkbox" onchange="toggleTheme()" id="slider">  
+            <span class="slider round"></span>  
+        </label>  
+    </div>
 </body>
 </html>
