--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
             <span class="slider round"></span>  
         </label>  
     </div>
+    <script src="code.js"></script>
 </body>
-<script> </script>
 </html>
