--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="them-light">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">  
-        <h1>Theme Switcher</h1>  
+        <h1>Switcher</h1>  
         <label id="switch" class="switch">  
             <input type="checkbox" onchange="toggleTheme()" id="slider">  
             <span class="slider round"></span>  
